fix: home app cards horizontal scroll

--- a/src/frontend/home/app/home.module.css
+++ b/src/frontend/home/app/home.module.css
@@ -73,6 +73,7 @@
     grid-auto-rows: 1fr;
     grid-gap: clamp(10px, 3vh - 2px, 20px);
     padding: clamp(10px, 3vh - 2px, 20px) 20px;
+    overflow: auto;
 
     @media (min-width: 500px) {
         padding: clamp(10px, 3vh - 2px, 20px) clamp(20px, 40vw - 200px, 1000px);
